--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -96,6 +96,13 @@ a{
   font-size: 24px;
 }
 
+.subtitle-sm{
+  font-family: 'Volkhov';
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 31px;
+}
+
 
 
 /******************************************
@@ -224,6 +231,50 @@ header nav>ul>*{
 
 .ourGoodsSection{
   align-items: center;
+}
+.ourGoodsSection>h2{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin: 1.5% 0;
+  height: 131px;
+}
+
+.menuOptions{
+  flex-wrap: wrap;
+  margin: 7% 0;
+}
+
+.ourGoodsSection>section{
+  max-width: 1120px;
+  padding-bottom: 3%;
+}
+
+.menuCategorySelection{
+  margin-top: 8%;
+  gap: 3%;
+}
+
+.menuCategorySelection li{
+  padding: 0 4%;
+  border-bottom: 1px solid  #5C5444;
+}
+
+.ourGoodsSection>section>nav ul{
+  justify-content: center;
+}
+
+.menuOptions li{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  width: 25.33%;
+  aspect-ratio: 1/1.3;
+  margin: 3% 4%;
+  padding: 4%;
+  border-radius: 55px;
+  background-color: #949C72;
 }
 
 
