--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -47,58 +47,70 @@ ul, menu{
 /* Fonts
 /*******************************************/
 
+/*Font set up*/
+
+html{
+  font-size: 62%;
+}
+
 /* Headings General*/
 
 h1{
-  font-family:'Vollkorn';
-  font-size: 96px;
+  font-family:'Vollkorn',serif;
+  font-size: 6rem;
   font-weight: 700;
   line-height: 134px;
 }
 
 h2{
-  font-family: 'Vollkorn SC';
-  font-size: 64px;
+  font-family: 'Vollkorn SC',serif;
+  font-size: 4rem;
   font-weight: 900;
   line-height: 89px;
 }
 
 h3{
-  font-family: 'Vollkorn SC';
-  font-size: 40px;
+  font-family: 'Vollkorn SC',serif;
+  font-size: 2.5rem;
   font-weight: 900;
   line-height: 56px;
 }
 
 h4, a{
-  font-family: 'Vollkorn SC';
-  font-size: 20px;
+  font-family: 'Vollkorn SC',serif;
+  font-size: 2.25rem;
   font-weight: 900;
   line-height: 34px;
 }
 
-
-.bodyTextLg{
-  font-family: 'Volkhov';
-  font-size: 20px;
+.bodyText, .comeVisitDetails li, footer li{
+  font-family: 'Volkhov', serif;
+  font-size: 1.4rem;
   font-weight: 400;
   line-height: 26px;
 }
 
-p{
-  font-family: 'Volkhov';
-  font-size: 16px;
+.bodyTextLg, .menuOptions span{
+  font-family: 'Volkhov',serif;
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.bodyText, p{
+  font-family: 'Volkhov',serif;
+  font-size: 1.39rem;
   font-weight: 400;
   line-height: 21px;
 }
 
 a{
-  font-size: 24px;
+  font-size: 2rem;
 }
 
 .subtitle-sm{
-  font-family: 'Volkhov';
-  font-size: 24px;
+  font-family: 'Volkhov', serif;
+  font-size: 3rem;
   font-weight: 400;
   line-height: 31px;
 }
@@ -168,12 +180,12 @@ body{
 header nav{
   justify-content: space-between;
   margin: 0 2vw;
-  padding: 1rem;
+  padding: 1%;
   text-align: center;
 }
 
 header nav>ul>*{
-  width: 8.813rem;
+  width: 150px;
 }
 
 .socialIcons img, .socialIcons a, .socialIcons li{
@@ -183,12 +195,12 @@ header nav>ul>*{
 }
 
 .socialIcons{
-  gap: 1.3em; 
-  height: 1em;
+  gap: 13%; 
+  height: 10%;
 }
 
 .socialIcons img{
-  width: 1.5rem;
+  width: 150%;
 }
 
 /*Big logo section Home*/
