--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -57,21 +57,21 @@ html{
 
 h1{
   font-family:'Vollkorn',serif;
-  font-size: 6rem;
+  font-size: 7rem;
   font-weight: 700;
   line-height: 134px;
 }
 
 h2{
   font-family: 'Vollkorn SC',serif;
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 900;
   line-height: 89px;
 }
 
 h3{
   font-family: 'Vollkorn SC',serif;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: 900;
   line-height: 56px;
 }
@@ -201,6 +201,10 @@ header nav>ul>*{
 
 .socialIcons img{
   width: 150%;
+}
+
+.miniLogo{
+  width: 38vh;
 }
 
 /*Big logo section Home*/
