--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -159,6 +159,7 @@ a{
   background-size: cover;
   background-position: top ;
   background-color: #85b9c4;
+  background-attachment: fixed;
 }
 
 .bgImg02{
@@ -166,6 +167,7 @@ a{
   background-size: cover;
   background-position: bottom ;
   background-color: #85b9c4;
+  background-attachment: fixed;
 }
 
 /*Body*/
