--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -84,22 +84,22 @@ h4, a{
 }
 
 .bodyText, .comeVisitDetails li, footer li{
-  font-family: 'Volkhov', serif;
+  font-family: sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 26px;
 }
 
 .bodyTextLg, .menuOptions span{
-  font-family: 'Volkhov',serif;
+  font-family: 'Volkhov', serif;
   font-size: 1.8rem;
   font-weight: 400;
   line-height: 26px;
 }
 
 .bodyText, p{
-  font-family: 'Volkhov',serif;
-  font-size: 1.39rem;
+  font-family: sans-serif;
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 21px;
 }
