--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -313,7 +313,7 @@ header nav>ul>*{
 .ourGoodsSection>section>nav ul{
   justify-content: center;
 }
-
+  
 .menuOptions li{
   display: flex;
   flex-direction: column;
@@ -382,6 +382,32 @@ footer{
  /******************************************
 /* Interactive effects
 /*******************************************/
+
+
+/*Nav link buttons*/
+
+.hoverGlow{
+  text-decoration: none;
+  color: #5C5444;
+  position: relative;
+}
+
+.hoverGlow::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+
+  transform: scaleX(0);
+  transition: transform 110ms ease-in;
+}
+
+.hoverGlow:hover::after{
+  transform: scaleX(1);
+}
 
 
  
