Add: backround color to the our goods option name and price

--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -329,6 +329,8 @@ header nav>ul>*{
 .menuOptions li div{
   position: absolute;
   padding: 3%;
+  background-color: #5C5444;
+  width: 25.3%;
 }
 
 /* Footer */
