--- a/Coffee_Backery/Coffee_backery_Code/css/style.css
+++ b/Coffee_Backery/Coffee_backery_Code/css/style.css
@@ -321,16 +321,25 @@ header nav>ul>*{
   flex-direction: column;
   justify-content: flex-end;
   width: 25.33%;
-  aspect-ratio: 1/1.3;
   margin: 3% 4%;
-  border-radius: 55px;
+  clip-path: inset(0% 0% 0% 0% round 55px);
+
+}
+
+.menuOptions section{
+  mask-composite: inherit;
 }
 
 .menuOptions li div{
   position: absolute;
-  padding: 3%;
+  padding: 2% 2%;
+  width: 30%;
   background-color: #5C5444;
-  width: 25.3%;
+  border-radius: 0 0 55px 55px;
+}
+
+.menuOptions li h4{
+  width: 8.2em ;
 }
 
 /* Footer */
@@ -346,11 +355,6 @@ footer{
 .footerSection{
   justify-content: space-between;
 }
-
-
-
-
-
 
 /******************************************
 /* ADDITIONAL STYLES
