--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -315,6 +315,7 @@ header nav>ul>*{
 
 .menu-category-selection li a{
   position: relative;
+  z-index: 1;
 }
 
 .our-goods-section>section>nav ul{
@@ -424,10 +425,11 @@ footer{
 
 .hoverGlow:hover{
   background-color: #5C5444;
+  border-radius: 15px;
 }
 
 .hoverGlow:hover::after{
-  transform: scaleX(1);
+  transform: scaleX(0.8);
 }
 
 
@@ -447,5 +449,14 @@ footer{
 }
 
 .menuGlow:hover::after{
-  transform: scaleX(1.1);
+  transform: scale(1.1);
+}
+
+.menuGlow:hover:after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 120%;
+  border-radius: 15px;
+  background:  rgba(72, 153, 169, 0.425);
 }
