--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -435,28 +435,37 @@ footer{
 
 /*Our goods buttons*/
 
+.menuGlow{
+  text-decoration: none;
+  color: #5C5444;
+  position: relative;
+  height: 40px;
+}
+
 .menuGlow::after{
   content: "";
   position: absolute;
+  color:#5C5444;
+  left: 5%;
+  bottom: 4px;
+  width: 90%;
   height: 2px;
-  width: 100%;
   background-color: currentColor;
-  bottom: -5px;
-  left: 0;
 
-  transform: scaleX(0.9);
-  transition: transform 60ms ease-in;
+  transform: scaleX(0.85);
+  transition: transform 110ms ease-in;
+}
+
+.menuGlow:hover > a{
+  color: white;
+}
+
+.menuGlow:hover{
+  background-color: #5C5444;
+  border-radius: 15px;
 }
 
 .menuGlow:hover::after{
-  transform: scale(1.1);
-}
-
-.menuGlow:hover:after{
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 120%;
-  border-radius: 15px;
-  background:  rgba(72, 153, 169, 0.425);
+  transform: scaleX(0.95);
+  color: white;
 }
