--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -295,16 +295,19 @@ header nav>ul>*{
 
 .menu-options{
   flex-wrap: wrap;
-  margin: 7% 0;
+  margin: 15px 0;
+  justify-content: center;
 }
 
 .our-goods-section>section{
-  max-width: 1120px;
-  padding-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  max-width: 1100px;
+  padding-bottom: 5%;
 }
 
 .menu-category-selection{
-  margin-top: 8%;
+  margin-top: 5%;
   gap: 3%;
 }
 
@@ -326,7 +329,7 @@ header nav>ul>*{
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  width: 25.33%;
+  width: 20.33%;
   margin: 3% 4%;
   clip-path: inset(0% 0% 0% 0% round 55px);
 }
