--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -331,24 +331,35 @@ header nav>ul>*{
   justify-content: flex-end;
   width: 20.33%;
   margin: 3% 4%;
-  clip-path: inset(0% 0% 0% 0% round 55px);
 }
 
-.menu-options section{
-  mask-composite: inherit;
-}
+    /*Product display*/
 
-.menu-options li div{
-  position: absolute;
-  padding: 22px 2%;
-  width: 30%;
-  background-color: #5C5444;
-  border-radius: 0 0 55px 55px;
-}
+    .menu-options li{
+      border-radius: 66px;
+      border: 10px solid #5C5444;
+      overflow: hidden;
+      display: flex;
+      flex-shrink: 0;
+      position: relative;
+    }
 
-.menu-options li h4{
-  width: 8.2em ;
-}
+    .menu-options img{
+    width: 100%; 
+    height: 100%;
+    object-fit: cover;
+    }
+
+    .card-body{
+      width: 100%;
+      height: 100%;
+      top: 75%;
+      position: absolute;
+      background: #85b9c4;
+      padding: 5px 12px;
+      display: flex;
+      justify-content: space-between;
+    }
 
 /* Footer */
 
