--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -321,7 +321,6 @@ header nav>ul>*{
 }
   
 .product-card{
-  display: flex;
   flex-direction: column;
   justify-content: flex-end;
   width: 255px;
@@ -337,6 +336,10 @@ header nav>ul>*{
       display: flex;
       flex-shrink: 0;
       position: relative;
+      flex-direction: column;
+      justify-content: flex-end;
+      width: 255px;
+      margin: 3% 4%;
     }
 
     .product-card img{
@@ -370,9 +373,7 @@ header nav>ul>*{
       backdrop-filter: blur(2px);
     }
 
-    .product-card:hover .product-card{
-      width: 120px;
-    }
+
 
 /* Footer */
 
