--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -320,12 +320,6 @@ header nav>ul>*{
   justify-content: center;
 }
   
-.product-card{
-  flex-direction: column;
-  justify-content: flex-end;
-  width: 255px;
-  margin: 3% 4%;
-}
 
     /*Product display*/
 
@@ -340,6 +334,8 @@ header nav>ul>*{
       justify-content: flex-end;
       width: 255px;
       margin: 3% 4%;
+
+      transition: 0.5s;
     }
 
     .product-card img{
@@ -353,16 +349,16 @@ header nav>ul>*{
       height: 100%;
       top: 75%;
       position: absolute;
-      align-items: flex-start;
+      align-items: center;
       background: #85b9c4;
-      padding: 15px 12px;
       display: flex;
+      padding: 10% 10%;
       gap: 25px;
       
       transition: 0.5s;
     }
 
-    .main-produc-info{
+    .main-product-info{
       width: 100%;
       justify-content: space-around;
     }
@@ -371,6 +367,13 @@ header nav>ul>*{
       top: 0%;
       background: #85bac4a1;
       backdrop-filter: blur(2px);
+      padding-top: 32%;
+    }
+
+    .product-card:hover{
+      transform: scale(1.1);
+      z-index: 2;
+      box-shadow: 0 0 30px 2px  #5C5444;
     }
 
 
