--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -289,8 +289,8 @@ header nav>ul>*{
   text-align: center;
   align-items: center;
   justify-content: center;
-  margin: 1.5% 0;
-  height: 131px;
+  margin: 20px 0;
+  /* height: 131px; */
 }
 
 .menu-options{
@@ -302,14 +302,16 @@ header nav>ul>*{
 .our-goods-section>section{
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
   max-width: 1100px;
-  padding-bottom: 5%;
+  min-height: 85vh;
+  padding: 7vh 0;
 }
 
-.menu-category-selection{
+/* .menu-category-selection{
   margin-top: 5%;
   padding-bottom: 25px;
-}
+} */
 
 .menu-category-selection li{
   padding: 0 4%;
