--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -308,11 +308,6 @@ header nav>ul>*{
   padding: 7vh 0;
 }
 
-/* .menu-category-selection{
-  margin-top: 5%;
-  padding-bottom: 25px;
-} */
-
 .menu-category-selection li{
   padding: 0 4%;
   position: relative;
@@ -339,16 +334,16 @@ header nav>ul>*{
     }
 
     .product-card img{
-    width: 100%; 
-    height: 100%;
-    object-fit: cover;
+      width: 100%; 
+      height: 100%;
+      object-fit: cover;
     }
 
     .card-body{
       height: 100%;
       top: 75%;
       position: absolute;
-      background: #85b9c4;
+      background: #5C5444;
       display: flex;
       padding: 10% 10%;
       gap: 25px;
@@ -372,7 +367,6 @@ header nav>ul>*{
     }
 
     .main-product-info{
-      /* width: 100%; */
       justify-content: space-around;
       align-items: baseline;
     }
