Fix: background img single when screen smallas opose to repeat

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -578,3 +578,11 @@ footer{
     text-align: center;
   }
 }
+
+@media (max-width: 756px){
+
+  /* Special bg*/
+  .bg-img-02{
+    background-size: 1300px;
+  }
+}
