Adjust: make our goods section responsive

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -550,3 +550,14 @@ footer{
   transform: scaleX(0.95);
   color: white;
 }
+
+/*Media Querry*/
+
+@media (max-width: 624px){
+
+  /*Product display*/
+  
+  .product-card{
+    width: 40%;
+  }
+}
