--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -331,7 +331,7 @@ header nav>ul>*{
 
     .product-card img{
       width: 100%; 
-      height: 100%;
+      /* height: 100%; */
       object-fit: cover;
     }
 
@@ -363,6 +363,10 @@ header nav>ul>*{
     .main-product-info{
       justify-content: space-around;
       align-items: baseline;
+    }
+
+    .main-product-info span{
+      font-size: 2.35rem;
     }
 
 /* Footer */
@@ -457,6 +461,7 @@ footer{
   color: #5C5444;
   position: relative;
   height: 40px;
+  border-radius: 15px;
 }
 
 .menuGlow::after{
