--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -251,6 +251,30 @@ header nav>ul>*{
 .about-us img{
   min-width: 700px;
 }
+  /*Pointer*/
+
+   .pointer{
+    position: absolute;
+    /* bottom: 0;
+    left: 0; */
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+  } 
+
+  .pointer svg{
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 70px;
+  }
+
+  .pointer .shape-fill {
+    fill: #FFFFFF;
+  }
+ 
+
 
 /* Come Visit */
 
@@ -331,7 +355,6 @@ header nav>ul>*{
 
     .product-card img{
       width: 100%; 
-      /* height: 100%; */
       object-fit: cover;
     }
 
