Adjust: replace class name test on mini logo anchor tag to mini-logo-anchor

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -220,7 +220,7 @@ header nav>ul>*{
     width: 330px;
   }
 
-  .test{
+  .mini-logo-anchor{
     width: 100%;
     display: flex;
     justify-content: center;
@@ -655,7 +655,7 @@ footer{
     width: 150%;
   }
   
-  .test{
+  .mini-logo-anchor{
     display: flex;
     position: static;
   }
