--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -210,7 +210,6 @@ header nav>ul>*{
 
 .nav-toggle-label{
   display: none;
-  border: 5px solid blue;
 }
 
 .social-icons{
@@ -677,15 +676,41 @@ footer{
     }
 
     .nav-toggle-label{
-      /* position: absolute; */
+      position: absolute;
       top: 0;
       left: 0;
       margin-left: 1em;
       border: 1px solid red;
-      height: 100%;
+      height: 69px;
       display: flex;
-      align-items: center;
+      align-items: center ;
     }
+
+    .nav-toggle-label>span,
+    .nav-toggle-label>span::before,
+    .nav-toggle-label>span::after{
+      display: block;
+      background-color: #5C5444;
+      height: 3px;
+      width: 2em;
+      border-radius: 2px;
+      position: relative;
+    }
+
+    .nav-toggle-label>span::before,
+    .nav-toggle-label>span::after{
+      content: " ";
+      position: absolute;
+    }
+
+    .nav-toggle-label>span::before{
+      bottom: 7px;
+    }
+
+    .nav-toggle-label>span::after{
+      top: 7px;
+    }
+
     
 }
 
